# spacehaven-modloader

./: .flake8  .gitignore  CHANGELOG.md  DEVELOPERS.md  README.md  TODO.md  generate_nsis_filelist.py  installer_template.nsi  modloader.spec  original-readme.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  spacehaven-modloader.py  version.py
.github/actions/build-nsis/: action.yaml
.github/workflows/: build.yml
loader/: extract.py  load.py
loader/assets/: annotate.py  custom-texture-manager.py  explode.py  library.py  merge.py  patch.py
loader/assets/utils/: __init__.py
tests/: test_jarmod_paths.py  test_jarmod_xml.py  test_paths_and_config.py  test_quicklaunch_cache.py  test_version.py
tools/: build-windows.bat  build-windows.ps1  setup-environment.ps1  setup-windows.bat
ui/: database.py  gameinfo.py  header.py  launcher.py  log.py  paths.py  scrolledlistbox.py
